Update index.html pencarian 7

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li>pencarian 4</li>
       <li>pencarian 5</li>
       <li>pencarian 6</li>
+      <li>pencarian 7</li>
     </ul>
   </body>
 </html>
